2012-05-05  Dominique Dumont  <domi.dumont@free.fr> 1.334

    * main widget (TkUI):
      + added show_change menu entry. Offer the same possibility
      when asked about saving before quitting
    * leaf editor:
      * Fix external editor call so the user can continue edition
	from widget to external editor without loosing modification
	already done in the text widget.
      + added ballon and changed button label to help user
    * require Config::Model 2.014
    * build-depend on Test::MemoryCycle

2012-03-20  Dominique Dumont  <domi.dumont@free.fr> 1.333

	* Fix error when updating a leaf value through NodeEditor

2012-03-14  Dominique Dumont  <domi.dumont@free.fr> 1.332

	* Hash editor: enable buttons when mouse button-2 is released
	  (paste)
	* wizard: clarify stop button. Added quit button
	* Leaf editor: grab focus when using external editor
	* Depends on Config::Model >= 2.001

2011-11-30  Dominique Dumont  <domi.dumont@free.fr> 1.331

    * dist.ini (hence Build.PL): Depends on Config::Model 1.263
      (Fixes a bug triggered by new NodeEditor widget)

2011-11-29  Dominique Dumont  <domi.dumont@free.fr> 1.330

    * dist.ini (hence Build.PL): added Tk::Pod dependency
      (Fix RT# 72229)
    + NodeEditor: Added widget to add element when node has 
      an accept clause 
    * TkUI: trim also default value displayed in tk tree 
    * ListEditor: do not update list widget when modif was 
      refused by Config::Model

2011-10-10  Dominique Dumont  <domi.dumont@free.fr> 1.329

	* ListEditor: signal TKUI that data needs to be saved when list is
	modified
        * LeafEditor: do not clear entry when input is wrong. This is
	annoying
        * TkUI: updated license wording to keep Debian lintian happy

2011-09-23  Dominique Dumont  <domi.dumont@free.fr> 1.328

	* ListEditor: enable apply_fix button
	* TkUI: Restrict cut buffer paste to tree widget

2011-09-16  Dominique Dumont  <domi.dumont@free.fr> 1.327

    * TkUI.pm: